--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -24,6 +24,8 @@
         </activity>
         <service android:name=".MyService">            
         </service>
+        <service android:name=".MyIntentService">            
+        </service>
     </application>
 
 </manifest>
